# graphics

xjtu_computer-graphics_course_lab-master/: README.md
xjtu_computer-graphics_course_lab-master/Lab01/: main.cpp
xjtu_computer-graphics_course_lab-master/Lab01/include/: backward_euler.h  dV_spring_particle_particle_dq.h  forward_euler.h  runge_kutta.h  symplectic_euler.h
xjtu_computer-graphics_course_lab-master/Lab01/src/: d2V_spring_particle_particle_dq2.cpp  dV_spring_particle_particle_dq.cpp
xjtu_computer-graphics_course_lab-master/Lab02/: CMakeLists.txt  bk1.cpp  build.sh  camera.h  hitable.h  hitable_list.cpp  hitable_list.h  main.cpp  material.cpp  material.h  ray.cpp  ray.h  sphere.cpp  sphere.h  vec3.h
